Add new datepicker dependency and style app inputs

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,38 +1,32 @@
 {
-  "header": {
-    "imgAlt": "logo"
+  "intro": {
+    "headline": "Hallo!",
+    "text": "Schön, dass Du hier bist! <br> Du bist gerade mit dem IC(E) unterwegs und willst uns mitteilen, wie gut oder schlecht das W-LAN funktioniert?",
+    "button": "Los geht's."
   },
-  "rating": {
-    "title": "Hotspot bewerten",
-    "titleDescription": "Bitten geben Sie alle nötigen Daten zu ihrer Zugverbindung an und bewerten Sie anschließend die Qualität Ihres Hotspots.",
-    "submit": "Bewertung abgeben",
-    "trainData": {
-      "type": "Zugtyp",
-      "number": "Zugnummer",
-      "wagon": "Wagonnummer"
+  "pagination": {
+    "next": "Weiter",
+    "previous": "Zurück"
+  },
+  "pages": {
+    "from": {
+      "headline": "Einstieg",
+      "text": "Erzähl uns bitte zunächst wo deine Reise startete.",
+      "placeholder": "Einstiegsbahnhof"
     },
-    "trainRating": {
-      "bad": "Schlecht",
-      "average": "Mittelmäßig",
-      "good": "Gut",
-      "badAlt": "Schlechte Bewertung",
-      "averageAlt": "Mittelmäßige Bewertung",
-      "goodAlt": "Gute Bewertung"
+    "journeyDate": {
+      "headline": "Reisedatum",
+      "text": "Um wie viel Uhr ging es los?",
+      "placeholder": "Einstiegsdatum"
+    },
+    "to": {
+      "headline": "Zielort",
+      "text": "Und wohin soll die Reise gehen?",
+      "placeholder": "Zielbahnhof"
+    },
+    "train": {
+      "headline": "Zugnummer",
+      "text": "Wähle deine Zugnummer"
     }
-  },
-  "page": {
-    "about": {
-      "title": "Was ist flopspot?",
-      "subtitle": "Flopspot ist das Folgende",
-      "description": [
-        "Aber da sich dieses Internet ja ohnehin nicht durchsetzen wird, ist das ganze nur halb so wild. Ich zahle gerne für nicht erbrachten Service.Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.",
-        "Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlich. Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können."
-      ]
-    }
-  },
-  "footer": {
-    "imprint": "Impressum",
-    "privacy": "Datenschutz",
-    "copyright": "Copyright 2020 - flopspot"
   }
 }
